--- a/src/app/modules/afiliacion/componentes/register/register.component.html
+++ b/src/app/modules/afiliacion/componentes/register/register.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div class="container">
   <div class="text-center mt-5">
     <h1>Compañia Arus</h1>
     <h2>Registro de causante</h2>
@@ -8,13 +8,14 @@
       <div class="card mt-2 mx-auto p-4 bg-light">
         <div class="card-body bg-light">
           <div class="container">
-            <form id="contact-form" role="form">
+            <form id="contact-form" role="form" [formGroup]="frmRegistro">
               <div class="controls">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="form_name">Numero de identificación *</label>
                       <input
+                        formControlName = "identificacion"
                         id="form_name"
                         type="text"
                         name="name"
@@ -29,6 +30,7 @@
                     <div class="form-group">
                       <label for="form_need">Tipo de documento *</label>
                       <select
+                        formControlName = "tipoIdentificacion"
                         id="form_need"
                         name="need"
                         class="form-control"
@@ -51,6 +53,7 @@
                     <div class="form-group">
                       <label for="form_email">Nombres *</label>
                       <input
+                        formControlName = "nombres"
                         id="form_email"
                         type="email"
                         name="email"
@@ -65,6 +68,7 @@
                     <div class="form-group">
                       <label for="form_email">Apellidos *</label>
                       <input
+                        formControlName = "apellidos"
                         id="form_email"
                         type="email"
                         name="email"
@@ -81,6 +85,7 @@
                     <div class="form-group">
                       <label for="form_name">Fecha de nacimiento *</label>
                       <input
+                        formControlName = "fechaNacimiento"
                         id="form_name"
                         type="text"
                         name="name"
@@ -95,6 +100,7 @@
                     <div class="form-group">
                       <label for="form_need">Genero *</label>
                       <select
+                        formControlName = "genero"
                         id="form_need"
                         name="need"
                         class="form-control"
@@ -109,29 +115,12 @@
                       </select>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label for="form_name">Ingresa un nick *</label>
-                      <input
-                        id="form_name"
-                        type="text"
-                        name="name"
-                        class="form-control"
-                        placeholder="Ingresa tu nick *"
-                        required="required"
-                        data-error="Firstname is required."
-                      />
-                    </div>
-                  </div>
-                  <button class="btn btn-danger">Registrar</button>
-                </div>
+                </div>                
               </div>
+              <button>Guardar</button>
             </form>
           </div>
         </div>
       </div>    
   </div>
 </div>
- -->
