--- a/src/app/modules/afiliacion/paginas/causantes/causantes.component.html
+++ b/src/app/modules/afiliacion/paginas/causantes/causantes.component.html
@@ -13,15 +13,15 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-          <td>@mdo</td>          
-          <td>@mdo</td>
-          <td class=""><button class="btn btn-primary">Editar</button><button class="btn btn-danger">Eliminar</button></td>          
+        <tr *ngFor="let persona of causante">
+          <th scope="row">{{persona.persona.id}}</th>
+          <td>{{persona.persona.identificacion}}</td>
+          <td>{{persona.persona.tipoIdentificacion}}</td>
+          <td>{{persona.persona.nombres}}</td>
+          <td>{{persona.persona.apellidos}}</td>          
+          <td>{{persona.persona.fechaNacimiento |date}}</td>             
+          <td>{{persona.persona.genero}}</td>
+          <td class=""><a routerLink="editarPersona/${{persona.persona.id}}" class="btn btn-primary">Editar</a><button class="btn btn-danger">Eliminar</button></td>          
         </tr>        
       </tbody>
     </table>
