--- a/src/app/modules/afiliacion/paginas/causantes/causantes.component.html
+++ b/src/app/modules/afiliacion/paginas/causantes/causantes.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <a routerLink="guardarPersona">
+        Nuevo Registro
+    </a>
     <table class="table">
       <thead>
         <tr>
@@ -21,7 +24,7 @@
           <td>{{persona.persona.apellidos}}</td>          
           <td>{{persona.persona.fechaNacimiento |date}}</td>             
           <td>{{persona.persona.genero}}</td>
-          <td class=""><a routerLink="editarPersona/${{persona.persona.id}}" class="btn btn-primary">Editar</a><button class="btn btn-danger">Eliminar</button></td>          
+          <td class=""><a routerLink="editarPersona/{{persona.persona.id}}" class="btn btn-primary">Editar</a><button class="btn btn-danger">Eliminar</button></td>          
         </tr>        
       </tbody>
     </table>
