--- a/src/app/modules/afiliacion/componentes/register/register.component.html
+++ b/src/app/modules/afiliacion/componentes/register/register.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="text-center mt-5">
     <h1>Compañia Arus</h1>
-    <h2>Registro de causante</h2>
+    <h2>{{tipo ? "Actualizar causante" : "Registro de causante"}}</h2>
   </div>
   <div class="row">
     <div class="col-lg-7 mx-auto">
       <div class="card mt-2 mx-auto p-4 bg-light">
         <div class="card-body bg-light">
-          <div class="container">
+          <div class="container" *ngIf="vista; else buscador"> 
             <form
               id="contact-form"
               role="form"
@@ -187,7 +187,10 @@
                   </div>
                 </div>
               </div>
-              <button type="submit">Guardar</button>
+              <div class="d-flex justify-content-between mt-3">
+                <button type="submit" class="btn btn-primary">{{tipo ? "Editar causante" : "Nuevo causante"}}</button>
+                <a class="btn btn-danger" routerLink="/">Volver</a>
+              </div>
             </form>
           </div>
         </div>
@@ -195,3 +198,7 @@
     </div>
   </div>
 </div>
+
+<ng-template #buscador>
+  <app-buscar (state)="cambio($event)"></app-buscar>
+</ng-template>
