se organiza el proyecto, se corrige errores de enrutamiento, se empieza a crear componente para registrar beneficiario

--- a/src/app/modules/afiliacion/paginas/causantes/causantes.component.html
+++ b/src/app/modules/afiliacion/paginas/causantes/causantes.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <a routerLink="guardarPersona">
+    <a routerLink="guardarPersona" class="btn btn-success">
         Nuevo Registro
     </a>
     <table class="table">
